--- a/locales/en.json
+++ b/locales/en.json
@@ -1,6 +1,6 @@
 {
     "settings": {
-        "title": "Settings for Crisis information",
-        "description": "Description"
+        "title": "Settings for Crisis information (Krisinformation)",
+        "description": "Add the cities you want to watch"
     }
 }
